# AnoScout

./: .gitignore  Dockerfile_backend  Dockerfile_scheduler  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/: config.json  initialize_database.py  main.py  write_config_to_bucket.py
backend/anomaly_detection/: AnomalyScoring.py  scheduler.py
backend/anomaly_detection/Classification/: AutoEncoder.py  KDE.py  OCNN.py
backend/helper/: caching.py  clustering.py  config.py  database.py  query.py  scheduler_queue.py  util.py
backend/modules/: algoVis.py  anomalies.py  database.py  scheduler_queue.py
dataset/EEG/: blinking_long.csv  blinking_short.csv  clenching.csv
dataset/GutenTAG/: gutenTAG_dirichlet_sine.py  gutenTAG_simple.py
dataset/GutenTAG/samples/: amplitude.csv  anomaly-free.csv  extremum.csv  frequency.csv  mean.csv  platform.csv  shift.csv  variance.csv
dataset/Wafer/: wafer.py
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  types.ts
frontend/src/components/atoms/: AnomalyLocation.tsx  CenteredLoadingSpinner.tsx  ChannelSelection.tsx  ConvexHull.tsx  CreatableSelectBox.tsx  NavbarBreadcrumbs.tsx  NominalBadge.tsx  Pagination.tsx  RatingSlider.tsx  ReturnLink.tsx  ScatterColorLegend.tsx  StyledInputField.tsx  (+3 more)
frontend/src/lib/: Boundaries.tsx  ClientOnly.tsx  IdsContext.tsx  atoms.tsx  contextLoader.tsx  convexHull.tsx  hooks.tsx
frontend/src/pages/: 404.tsx  index.tsx
frontend/src/styles/: globals.css  slider.css
(+76 files in other folders)
